# demarcator

./: README.md  code_process.md  demarcator.db  human_test.md  next_steps.md  pyproject.toml  sitecustomize.py  summary.md
demarcator/: __init__.py
src/demarcator/: __init__.py  api.py  bootstrap.py  models.py  pi_bridge.py  services.py  store.py
src/demarcator.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: test_api.py  test_services.py
