[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "demarcator"
version = "0.1.0"
description = "SMB AI control plane built around policy, approvals, and auditability."
readme = "README.md"
requires-python = ">=3.13"
dependencies = []

[project.scripts]
demarcator-api = "demarcator.api:main"
demarcator-pi-run = "demarcator.pi_bridge:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
